# AutomaticEmergencyBrakeSystem-AEB-

./: README.md
matlab_modell/Funktion_AEB/: A1_Vorlage_Erstellung_BA_Beschleunigungen.m  A2_Vorlage_Erstellung_BA_Trajektorie.m  A3_Vorlage_Visualisierung_BA_Trajektorie.m  A4_Vorlage_Notbremsassistent.m  Documentation.docx  ML_Check_BA_Trajektorie.m  Messdaten.mat  T1_Plot_Ego_Fahrzeug.m  T1_Plot_Messdaten.m  testStationaryLeftCurve.m
matlab_modell/Funktion_Sicherheit/: Berechnung_v_max.m  Berechnung_x_Fehlausloesung.m  Berechnung_x_Warnung.m  Diagram.m
matlab_modell/Simulink/: Langsdynamikmodell.slx  Parameter.m  sensor_vehicle_modell.slx
nba/: README.md
nba/ros/: README.md
nba/ros/.catkin_tools/profiles/default/: devel_collisions.txt
nba/ros/src/driver_cmds/: README.md
nba/ros/src/driver_cmds/tod_command_creation/: CMakeLists.txt  package.xml
nba/ros/src/driver_cmds/tod_command_creation/launch/: tod_command_creation.launch
nba/ros/src/driver_cmds/tod_command_creation/src/: CMakeLists.txt  CommandCreator.cpp  CommandCreator.h
nba/ros/src/driver_cmds/tod_helper/: CMakeLists.txt
nba/ros/src/driver_cmds/tod_helper/include/tod_helper/colored_polygon/: Helpers.h
nba/ros/src/driver_cmds/tod_helper/include/tod_helper/object_list/: Helpers.h
nba/ros/src/driver_cmds/tod_helper/include/tod_helper/status/: ChangeDetector.h  ControlModeChecker.h  ModeChecker.h
nba/ros/src/driver_cmds/tod_helper/include/tod_helper/timer/: ScopedTimer.h
nba/ros/src/driver_cmds/tod_helper/include/tod_helper/trajectory/: BrakeIntoStillStand.h  Helpers.h  StraightTrajectory.h  TodTrajectoryCreator.h
nba/ros/src/driver_cmds/tod_helper/test/: test.launch
nba/ros/src/driver_cmds/tod_helper/test/geometry/: CMakeLists.txt  testGeometryHelpers.cpp
nba/ros/src/driver_cmds/tod_helper/test/status/: CMakeLists.txt  testControlModeChecker.cpp  testStatusChangeDetector.cpp
nba/ros/src/driver_cmds/tod_helper/test/trajectory/: CMakeLists.txt  testBrakeIntoStillStand.cpp  testTrajectoryHelpers.cpp
nba/ros/src/driver_cmds/tod_input_devices/: CMakeLists.txt  package.xml
nba/ros/src/driver_cmds/tod_input_devices/launch/: tod_input_devices.launch
nba/ros/src/driver_cmds/tod_input_devices/src/: CMakeLists.txt  InputDeviceController.cpp  InputDeviceController.h
nba/ros/src/driver_cmds/tod_lgsvl_bridge/: CMakeLists.txt  README.md  package.xml
nba/ros/src/driver_cmds/tod_lgsvl_bridge/launch/: tod_lgsvl_bridge.launch
nba/ros/src/driver_cmds/tod_msgs/: CMakeLists.txt
nba/ros/src/driver_cmds/tod_msgs/msg/: Color.msg  Mesh.msg
nba/ros/src/driver_cmds/tod_msgs/srv/: Audio.srv
nba/ros/src/pfas_nba/: CMakeLists.txt  README.md  package.xml  pfas.rviz  pfas.xml  pfas_svl.rviz  rqt_multiplot.xml  scenario_eval.rviz
nba/ros/src/pfas_nba/launch/: input_device.launch  pfas_nba.launch  pfas_nba_svl.launch  pfas_record_bags.launch  pfas_scenario.launch  scenario_eval.launch
nba/ros/src/pfas_nba/src/: AutopilotNode.cpp  CollisionDetectionNode.cpp  CorridorCreationNode.cpp  ScenarioEvaluationNode.cpp  TrajectoryPredictionNode.cpp
nba/ros/src/pfas_nba_lib/: CMakeLists.txt  package.xml
nba/ros/src/pfas_nba_lib/include/: CollisionDetection.h  CorridorCreation.h  TrajectoryPrediction.h  VehicleParams.h  helper.h
nba/ros/src/pfas_nba_lib/src/: CollisionDetection.cpp  CorridorCreation.cpp  TrajectoryPrediction.cpp  main.cpp
nba/ros/src/tod_common/: .gitlab-ci.yml
nba/ros/src/tod_common/ci/: build_and_test_job.sh  style_check_job.sh
nba/ros/src/tod_common/tod_cloud/: CMakeLists.txt  README.md  package.xml
nba/ros/src/tod_common/tod_cloud/cmake/Modules/: FindCURLPP.cmake  FindJsonCpp.cmake
nba/ros/src/tod_common/tod_cloud/include/tod_cloud/: HttpHandler.h  todHttpMsgs.h  todHttpPaths.h
nba/ros/src/tod_common/tod_cloud/src/: HttpHandler.cpp  todHttpMsgs.cpp
nba/ros/src/tod_common/tod_cloud/test/: CMakeLists.txt  test.launch  testTodHttpMsgs.cpp
nba/ros/src/tod_common/tod_helper/: CMakeLists.txt  README.md
nba/ros/src/tod_common/tod_helper/include/tod_helper/colored_polygon/: Helpers.h
nba/ros/src/tod_common/tod_helper/include/tod_helper/geometry/: Conversion.h  Helpers.h
nba/ros/src/tod_common/tod_helper/include/tod_helper/object_list/: Helpers.h
nba/ros/src/tod_common/tod_helper/include/tod_helper/status/: ChangeDetector.h  ControlModeChecker.h  ModeChecker.h
nba/ros/src/tod_common/tod_helper/include/tod_helper/trajectory/: BrakeIntoStillStand.h  Helpers.h  StraightTrajectory.h  TodTrajectoryCreator.h
nba/ros/src/tod_common/tod_helper/include/tod_helper/vehicle/: Model.h  Parameters.h
nba/ros/src/tod_common/tod_helper/test/geometry/: CMakeLists.txt  testConversion.cpp  testGeometryHelpers.cpp
nba/ros/src/tod_common/tod_helper/test/trajectory/: CMakeLists.txt  testBrakeIntoStillStand.cpp  testTrajectoryHelpers.cpp
nba/ros/src/tod_common/tod_launch/: README.md
nba/ros/src/tod_common/tod_msgs/: CMakeLists.txt
nba/ros/src/tod_common/tod_msgs/msg/: Color.msg  Mesh.msg
nba/ros/src/tod_common/tod_network/: CMakeLists.txt  README.md
nba/ros/src/tod_common/tod_network/test/: CMakeLists.txt  Gtester.cpp
nba/ros/src/tod_common/tod_safety_monitoring/: CMakeLists.txt  README.md  package.xml
nba/ros/src/tod_common/tod_safety_monitoring/include/tod_safety_monitoring/: IssueBuffer.h  SafetyGate.h  SafetyMonitor.h
nba/ros/src/tod_common/tod_safety_monitoring/msg/: SafetyIssue.msg  SafetyStatus.msg
nba/ros/src/tod_common/tod_safety_monitoring/src/: IssueBuffer.cpp  SafetyGate.cpp  SafetyGateNode.cpp  SafetyMonitor.cpp
nba/ros/src/tod_common/tod_safety_monitoring/test/: CMakeLists.txt  TestNode.cpp  UnitTests.cpp  test.launch
pfas_ha/termin06_ha/: main.cpp
pfas_theorie/: .gitignore  README.md
pfas_theorie/termin06/: README.md  main.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp
pfas_theorie/termin06/tasks/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
pfas_theorie/termin07/: README.md  main  main.cpp  pose  pose.cpp
pfas_theorie/termin08/: README.md  listener.cpp  talker.cpp
pfas_theorie/termin08/ros_ws/src/pfas/: CMakeLists.txt  package.xml
(+20 files in other folders)
